@@ -880,5 +880,27 @@ namespace MySql.Data.MySqlClient.Tests
             Assert.AreEqual(1, dt.Rows[1][2]);
             Assert.AreEqual(DBNull.Value, dt.Rows[2][2]);
         }
+
+        /// <summary>
+        /// Bug #36081 Get Unknown Datatype in C# .Net 
+        /// </summary>
+        [Test]
+        public void GeometryType()
+        {
+            if (version < new Version(5, 0)) return;
+
+            execSQL("DROP TABLE IF EXISTS Test");
+            execSQL(@"CREATE TABLE Test (ID int(11) NOT NULL,
+                ogc_geom geometry NOT NULL default '',
+                PRIMARY KEY  (`ID`))");
+            execSQL(@"INSERT INTO Test VALUES (1, 
+                GeomFromText('GeometryCollection(Point(1 1), LineString(2 2, 3 3))'))");
+
+            MySqlCommand cmd = new MySqlCommand("SELECT * FROM Test", conn);
+            using (MySqlDataReader reader = cmd.ExecuteReader())
+            {
+                reader.Read();
+            }
+        }
 	}
 }
